--- a/index.html
+++ b/index.html
@@ -6,97 +6,74 @@
     <title>KONTORA STORE</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        /* --- СТИЛИ (CSS) --- */
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5; /* Светло-серый фон */
+            background-color: #f5f5f5;
             color: #000;
-            padding-bottom: 80px; /* Отступ снизу для меню */
+            padding-bottom: 80px;
         }
-
-        /* Шапка */
-        .header {
+        .header-logo {
             background: white;
-            padding: 10px 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-weight: bold;
-            font-size: 18px;
+            padding: 20px;
+            text-align: center;
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
-
-        /* Баннер (Логотип) */
-        .banner {
-            margin: 15px;
-            background: white;
-            border-radius: 15px;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-        .banner img {
-            max-width: 100%;
+        .header-logo img {
+            max-width: 200px; 
             height: auto;
         }
-
-        /* Заголовки разделов */
         .section-title {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             padding: 0 15px;
             margin-top: 20px;
             margin-bottom: 10px;
-        }
-        .section-title h2 {
+            font-weight: bold;
             font-size: 20px;
-            margin: 0;
         }
-        .section-title span {
-            color: #888;
-            font-size: 14px;
-        }
-
-        /* Сетка товаров */
         .products-grid {
             display: grid;
-            grid-template-columns: 1fr 1fr; /* Две колонки */
+            grid-template-columns: 1fr 1fr;
             gap: 10px;
             padding: 0 15px;
         }
-
-        /* Карточка товара */
         .product-card {
-            background: transparent;
-            border-radius: 10px;
+            background: white;
+            border-radius: 12px;
             overflow: hidden;
+            padding-bottom: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
         }
         .product-image {
             width: 100%;
-            height: 150px;
-            background-color: #ddd; /* Цвет заглушки, если нет фото */
-            border-radius: 15px;
+            height: 180px; 
             object-fit: cover;
-            margin-bottom: 5px;
+        }
+        .product-info {
+            padding: 8px;
         }
         .price {
             font-weight: bold;
             font-size: 16px;
-            margin: 0;
+            color: #000;
         }
         .name {
             font-size: 13px;
             color: #666;
-            margin: 2px 0 0 0;
-            line-height: 1.2;
+            margin-top: 4px;
         }
-
-        /* Нижнее меню */
+        .btn-buy {
+            display: block;
+            width: 90%;
+            margin: 10px auto 0;
+            padding: 8px;
+            background-color: #3390ec;
+            color: white;
+            text-align: center;
+            border-radius: 8px;
+            text-decoration: none;
+            font-size: 14px;
+        }
         .bottom-nav {
             position: fixed;
             bottom: 0;
@@ -107,103 +84,60 @@
             justify-content: space-around;
             padding: 10px 0;
             border-top: 1px solid #eee;
-            z-index: 1000;
         }
         .nav-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            text-align: center;
             font-size: 10px;
             color: #888;
             text-decoration: none;
         }
-        .nav-item.active {
-            color: #3390ec; /* Цвет активной кнопки (синий телеграм) */
-        }
-        .nav-icon {
-            font-size: 20px;
-            margin-bottom: 3px;
-        }
-
     </style>
 </head>
 <body>
 
-    <div class="header">
-        <div>Kontora Store</div>
-        <div style="color: #ccc;">✖</div> </div>
-
-    <div class="banner">
-        <h1 style="font-family: Impact, sans-serif; font-size: 40px; margin:0;">KONTORA</h1>
+    <div class="header-logo">
+        <img src="shoplogo.jpg" alt="Логотип KONTORA">
     </div>
 
     <div class="section-title">
-        <h2>Обновление</h2>
-        <span>Смотреть все</span>
+        👖 В наличии
     </div>
 
     <div class="products-grid">
+        
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x300/dddddd/333333?text=Jacket" class="product-image">
-            <p class="price">14 990 ₽</p>
-            <p class="name">Пуховик Black Yak</p>
+            <img src="greypants.jpg" class="product-image" alt="Серые штаны">
+            <div class="product-info">
+                <div class="price">2 500 ₽</div>
+                <div class="name">Штаны Grey Edition</div>
+                <a href="#" class="btn-buy">Купить</a>
+            </div>
         </div>
+
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x300/dddddd/333333?text=Shirt" class="product-image">
-            <p class="price">6 990 ₽</p>
-            <p class="name">Харрингтон Tommy Hilfiger</p>
+            <img src="bluepants.jpg" class="product-image" alt="Синие штаны">
+            <div class="product-info">
+                <div class="price">3 200 ₽</div>
+                <div class="name">Штаны Blue Classic</div>
+                <a href="#" class="btn-buy">Купить</a>
+            </div>
         </div>
+
     </div>
 
-    <div class="section-title">
-        <h2>Верхняя одежда</h2>
-        <span>Смотреть все</span>
-    </div>
-
-    <div class="products-grid">
-        <div class="product-card">
-            <img src="https://via.placeholder.com/300x300/dddddd/333333?text=Sweater" class="product-image">
-            <p class="price">6 490 ₽</p>
-            <p class="name">Weekend Offender</p>
-        </div>
-        <div class="product-card">
-            <img src="https://via.placeholder.com/300x300/dddddd/333333?text=Puffer" class="product-image">
-            <p class="price">13 990 ₽</p>
-            <p class="name">Пуховик The North Face</p>
-        </div>
-    </div>
-    
-    <div style="text-align: center; color: #999; margin-top: 20px; font-size: 12px;">
+    <div style="text-align: center; margin-top: 30px; color: #999; font-size: 12px;">
         @KontoraStore_bot
     </div>
 
     <div class="bottom-nav">
-        <a href="#" class="nav-item active">
-            <span class="nav-icon">🏠</span>
-            Главная
-        </a>
-        <a href="#" class="nav-item">
-            <span class="nav-icon">🔍</span>
-            Каталог
-        </a>
-        <a href="#" class="nav-item">
-            <span class="nav-icon">🛒</span>
-            Корзина
-        </a>
-        <a href="#" class="nav-item">
-            <span class="nav-icon">❤️</span>
-            Избранное
-        </a>
-        <a href="#" class="nav-item">
-            <span class="nav-icon">👤</span>
-            Профиль
-        </a>
+        <div class="nav-item">🏠<br>Главная</div>
+        <div class="nav-item">🔍<br>Поиск</div>
+        <div class="nav-item">🛒<br>Корзина</div>
+        <div class="nav-item">👤<br>Профиль</div>
     </div>
 
     <script>
-        // Сообщаем Телеграму, что приложение готово
         Telegram.WebApp.ready();
-        // Растягиваем на весь экран
         Telegram.WebApp.expand();
     </script>
 </body>
