--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             background-color: #f5f5f5;
             color: #000;
-            padding-bottom: 80px;
+            padding-bottom: 100px; /* Увеличил отступ снизу, чтобы меню не перекрывало товары */
         }
         .header-logo {
             background: white;
@@ -66,14 +66,17 @@
             display: block;
             width: 90%;
             margin: 10px auto 0;
-            padding: 8px;
+            padding: 10px 0; /* Чуть больше кнопка */
             background-color: #3390ec;
             color: white;
             text-align: center;
             border-radius: 8px;
             text-decoration: none;
             font-size: 14px;
+            font-weight: 500;
         }
+
+        /* --- НОВЫЕ СТИЛИ ДЛЯ МЕНЮ --- */
         .bottom-nav {
             position: fixed;
             bottom: 0;
@@ -81,15 +84,33 @@
             width: 100%;
             background: white;
             display: flex;
-            justify-content: space-around;
-            padding: 10px 0;
+            justify-content: space-around; /* Равномерное распределение */
+            align-items: center;
+            padding: 12px 0; /* Больше воздуха сверху и снизу */
             border-top: 1px solid #eee;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.05); /* Легкая тень вверх */
+            z-index: 100;
         }
         .nav-item {
-            text-align: center;
-            font-size: 10px;
-            color: #888;
+            display: flex;
+            flex-direction: column; /* Иконка над текстом */
+            align-items: center;
             text-decoration: none;
+            color: #8e8e93; /* Цвет неактивной кнопки */
+            flex: 1; /* Чтобы кнопки занимали всю ширину */
+        }
+        .nav-icon {
+            font-size: 24px; /* КРУПНАЯ ИКОНКА */
+            margin-bottom: 4px;
+            line-height: 1;
+        }
+        .nav-text {
+            font-size: 11px; /* Читаемый текст */
+            font-weight: 500;
+        }
+        /* Активная кнопка (можно добавить класс active в html) */
+        .nav-item.active {
+            color: #3390ec;
         }
     </style>
 </head>
@@ -130,10 +151,21 @@
     </div>
 
     <div class="bottom-nav">
-        <div class="nav-item">🏠<br>Главная</div>
-        <div class="nav-item">🔍<br>Поиск</div>
-        <div class="nav-item">🛒<br>Корзина</div>
-        <div class="nav-item">👤<br>Профиль</div>
+        <div class="nav-item active"> <span class="nav-icon">🏠</span>
+            <span class="nav-text">Главная</span>
+        </div>
+        <div class="nav-item">
+            <span class="nav-icon">🔍</span>
+            <span class="nav-text">Поиск</span>
+        </div>
+        <div class="nav-item">
+            <span class="nav-icon">🛒</span>
+            <span class="nav-text">Корзина</span>
+        </div>
+        <div class="nav-item">
+            <span class="nav-icon">👤</span>
+            <span class="nav-text">Профиль</span>
+        </div>
     </div>
 
     <script>
