--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 
     <div class="section-title">
-        👖 В наличии
+        В наличии
     </div>
 
     <div class="products-grid">
@@ -213,3 +213,4 @@
     </script>
 </body>
 </html>
+
