--- a/index.html
+++ b/index.html
@@ -178,6 +178,50 @@
             margin-top: 20px;
         }
 
+        /* --- СТИЛИ ДЛЯ ИЗБРАННОГО (НОВОЕ) --- */
+        .favorites-header {
+            padding: 20px 15px;
+            font-size: 22px;
+            font-weight: bold;
+        }
+        .empty-state {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px;
+            text-align: center;
+        }
+        /* Анимация пульсации сердца */
+        @keyframes heartbeat {
+            0% { transform: scale(1); }
+            15% { transform: scale(1.15); }
+            30% { transform: scale(1); }
+            45% { transform: scale(1.15); }
+            60% { transform: scale(1); }
+            100% { transform: scale(1); }
+        }
+        .animated-heart {
+            font-size: 80px;
+            margin-bottom: 20px;
+            animation: heartbeat 2s infinite; /* Бесконечная анимация */
+        }
+        .empty-text {
+            font-size: 18px;
+            color: #000;
+            margin-bottom: 20px;
+        }
+        .btn-blue-outline {
+            background-color: #3390ec;
+            color: white;
+            border: none;
+            padding: 12px 25px;
+            border-radius: 8px;
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+        }
+
         /* --- НИЖНЕЕ МЕНЮ --- */
         .bottom-nav {
             position: fixed;
@@ -275,13 +319,14 @@
             </div>
 
             <div class="menu-list">
-                <a href="#" class="menu-item-row">
+                <a href="#" class="menu-item-row" onclick="openFavorites()">
                     <svg class="menu-icon-left" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
                     </svg>
                     <span class="menu-text">Избранное</span>
                     <span class="arrow-right">›</span>
                 </a>
+
                 <a href="#" class="menu-item-row">
                     <svg class="menu-icon-left" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
@@ -317,15 +362,26 @@
             </div>
 
             <div class="version-text">
-                version 9.4<br><br>
+                version 9.5<br><br>
                 @KontoraStore_bot
             </div>
         </div>
     </div>
 
 
+    <div id="favorites-view" class="page">
+        <div class="favorites-header">Избранное</div>
+        
+        <div class="empty-state">
+            <div class="animated-heart">❤️</div>
+            <div class="empty-text">Здесь пока пусто</div>
+            <button class="btn-blue-outline" onclick="goToCatalog()">Перейти в каталог</button>
+        </div>
+    </div>
+
+
     <div class="bottom-nav">
-        <div class="nav-item active" onclick="switchTab('main', this)">
+        <div id="nav-main" class="nav-item active" onclick="switchTab('main', this)">
             <svg class="nav-icon" viewBox="0 0 24 24">
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
@@ -342,7 +398,7 @@
             <span class="nav-text">Корзина</span>
         </div>
 
-        <div class="nav-item" onclick="alert('Избранное пусто')">
+        <div id="nav-favorites" class="nav-item" onclick="openFavorites()">
             <svg class="nav-icon" viewBox="0 0 24 24">
                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
             </svg>
@@ -359,43 +415,57 @@
     </div>
 
     <script>
-        // Инициализация Telegram
         const tg = window.Telegram.WebApp;
         tg.ready();
         tg.expand();
 
-        // 🟢 МАГИЯ ТЕЛЕГРАМА: Достаем имя и фото
+        // 🟢 Подтягиваем данные пользователя
         const user = tg.initDataUnsafe.user;
-
         if (user) {
-            // 1. Ставим имя
-            if (user.first_name) {
-                document.getElementById('user-name').innerText = user.first_name;
-            }
-            // 2. Ставим аватарку
-            if (user.photo_url) {
-                document.getElementById('user-avatar').src = user.photo_url;
-            }
+            if (user.first_name) document.getElementById('user-name').innerText = user.first_name;
+            if (user.photo_url) document.getElementById('user-avatar').src = user.photo_url;
         }
 
-        // Логика переключения вкладок
+        // --- ЛОГИКА НАВИГАЦИИ ---
+
+        // Переключение главных вкладок (Главная / Профиль)
         function switchTab(tabName, element) {
-            // 1. Убираем синий цвет у всех кнопок
+            // Сброс активных кнопок
             document.querySelectorAll('.nav-item').forEach(el => el.classList.remove('active'));
-            
-            // 2. Делаем нажатую кнопку синей
             element.classList.add('active');
 
-            // 3. Скрываем все страницы
-            document.getElementById('main-view').classList.remove('active');
-            document.getElementById('profile-view').classList.remove('active');
+            // Скрытие всех страниц
+            hideAllPages();
 
-            // 4. Показываем нужную страницу
+            // Показ нужной
             if (tabName === 'main') {
                 document.getElementById('main-view').classList.add('active');
             } else if (tabName === 'profile') {
                 document.getElementById('profile-view').classList.add('active');
             }
+        }
+
+        // Функция открытия Избранного (вызывается из меню профиля и нижней панели)
+        function openFavorites() {
+            // Подсветка кнопки в нижнем меню
+            document.querySelectorAll('.nav-item').forEach(el => el.classList.remove('active'));
+            document.getElementById('nav-favorites').classList.add('active');
+
+            hideAllPages();
+            document.getElementById('favorites-view').classList.add('active');
+        }
+
+        // Функция кнопки "Перейти в каталог"
+        function goToCatalog() {
+            // Имитируем нажатие на кнопку "Главная"
+            document.getElementById('nav-main').click();
+        }
+
+        // Вспомогательная функция, чтобы скрыть всё
+        function hideAllPages() {
+            document.getElementById('main-view').classList.remove('active');
+            document.getElementById('profile-view').classList.remove('active');
+            document.getElementById('favorites-view').classList.remove('active');
         }
     </script>
 </body>
