--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
 
         .btn-go-cart {
             flex: 1.2; height: 100%;
-            background-color: #ffcc00; 
-            color: #000; border-radius: 12px;
+            /* ИЗМЕНЕНО: Цвет фона на голубой, цвет текста на белый */
+            background-color: #3390ec; 
+            color: white; 
+            border-radius: 12px;
             display: flex; align-items: center; justify-content: center;
             font-size: 16px; font-weight: 600; cursor: pointer; gap: 8px;
         }
@@ -204,7 +206,7 @@
         .nav-item {
             display: flex; flex-direction: column; align-items: center;
             color: #999; flex: 1; padding: 4px 0; cursor: pointer;
-            position: relative; /* ДОБАВЛЕНО: Чтобы бейджик позиционировался относительно кнопки */
+            position: relative; 
         }
         .nav-item.active { color: #3390ec; }
         .nav-icon { width: 24px; height: 24px; margin-bottom: 4px; fill: none; stroke: currentColor; stroke-width: 2; stroke-linecap: round; stroke-linejoin: round; }
@@ -222,10 +224,9 @@
         .animate-pulse { width: 100px; height: 100px; object-fit: contain; margin-bottom: 15px; animation: pulseBeat 1.5s infinite ease-in-out; }
         @keyframes pulseBeat { 0% { transform: scale(1); } 14% { transform: scale(1.15); } 28% { transform: scale(1); } 42% { transform: scale(1.15); } 70% { transform: scale(1); } }
         
-        /* Исправленный бейджик навигации */
         #cart-badge-nav {
             top: 2px;
-            right: 25px; /* Позиция внутри кнопки */
+            right: 25px; 
         }
 
     </style>
@@ -318,7 +319,7 @@
                     <span style="flex-grow:1">Мои заказы</span><span>›</span>
                 </a>
             </div>
-             <div class="version-text">version 11.3</div>
+             <div class="version-text">version 11.4</div>
         </div>
     </div>
 
