--- a/index.html
+++ b/index.html
@@ -238,8 +238,11 @@
 <body>
 
     <div id="main-view" class="page active">
-        <div class="header-logo"><h2>КАТАЛОГ</h2></div>
-        <div class="section-title">В наличии</div>
+    <div class="header-logo"><h2>КАТАЛОГ</h2></div>
+    <div class="main-banner">
+        <img src="banner.jpg" alt="Рекламный баннер">
+    </div>
+    <div class="section-title">В наличии</div>
         <div class="products-grid">
             <div class="product-card" onclick="openProduct('grey')">
                 <img src="greypants.jpg" class="product-image">
@@ -836,3 +839,4 @@
     </script>
 </body>
 </html>
+
