--- a/index.html
+++ b/index.html
@@ -233,6 +233,21 @@
         
         #cart-badge-nav { top: 2px; right: 25px; }
 
+        /* СТИЛИ ДЛЯ БАННЕРА */
+        .main-banner {
+            width: 100%;
+            padding: 10px 10px 0;
+            box-sizing: border-box;
+        }
+
+        .main-banner img {
+            width: 100%;
+            border-radius: 12px;
+            display: block;
+            object-fit: cover;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
     </style>
 </head>
 <body>
@@ -240,22 +255,22 @@
     <div id="main-view" class="page active">
     <div class="header-logo"><h2>КАТАЛОГ</h2></div>
     <div class="main-banner">
-        <img src="banner.jpg" alt="Рекламный баннер">
+        <img src="img/BZR0LOGO RASTR.png" alt="Рекламный баннер">
     </div>
     <div class="section-title">В наличии</div>
         <div class="products-grid">
             <div class="product-card" onclick="openProduct('grey')">
-                <img src="greypants.jpg" class="product-image">
+                <img src="img/GREY FRONT.png" class="product-image">
                 <div class="product-info">
-                    <div class="grid-price">2 500 ₽</div>
-                    <div class="grid-name">Штаны Grey Edition</div>
+                    <div class="grid-price">12 000 ₽</div>
+                    <div class="grid-name">Тяжеловесы Grey Edition</div>
                 </div>
             </div>
             <div class="product-card" onclick="openProduct('blue')">
-                <img src="bluepants.jpg" class="product-image">
+                <img src="img/BLUE FRONT.png" class="product-image">
                 <div class="product-info">
-                    <div class="grid-price">3 200 ₽</div>
-                    <div class="grid-name">Штаны Blue Classic</div>
+                    <div class="grid-price">12 000 ₽</div>
+                    <div class="grid-name">Тяжеловесы Blue Edition</div>
                 </div>
             </div>
         </div>
@@ -839,4 +854,5 @@
     </script>
 </body>
 </html>
+
 
