--- a/index.html
+++ b/index.html
@@ -145,15 +145,21 @@
         }
 
         .slider-content img {
-
             width: 100%;
-
             height: 100%;
-
             object-fit: cover;
-
             flex-shrink: 0;
-
+            user-select: none;
+            -webkit-user-drag: none;
+            pointer-events: none;
+        }
+        .slider-content {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.3s ease-out;
+            touch-action: pan-y;
+            cursor: grab;
         }
 
         .slider-nav-btn {
@@ -1044,6 +1050,9 @@
         let currentSelectedSize = 'L'; 
 
         let lastPageBeforeLegal = 'profile';
+     let isDragging = false;
+        let startX = 0;
+        let xDiff = 0;
 
 
         // --- ЛОГИКА СЛАЙДЕРА ---
@@ -1064,6 +1073,36 @@
 
             });
 
+        }
+     
+     function handleDragStart(e) {
+            isDragging = true;
+            startX = e.type.includes('mouse') ? e.pageX : e.touches[0].clientX;
+            document.getElementById('detail-slider-content').style.transition = 'none';
+        }
+
+        function handleDragMove(e) {
+            if (!isDragging) return;
+            currentX = e.type.includes('mouse') ? e.pageX : e.touches[0].clientX;
+            xDiff = currentX - startX;
+            const container = document.getElementById('detail-slider-content');
+            const offset = -activeSlideIndex * container.offsetWidth + xDiff;
+            container.style.transform = `translateX(${offset}px)`;
+        }
+
+        function handleDragEnd() {
+            if (!isDragging) return;
+            isDragging = false;
+            const container = document.getElementById('detail-slider-content');
+            container.style.transition = 'transform 0.3s ease-out';
+            
+            if (Math.abs(xDiff) > 50) {
+                if (xDiff < 0) nextSlide();
+                else prevSlide();
+            } else {
+                updateSliderPosition();
+            }
+            xDiff = 0;
         }
 
 
@@ -1191,6 +1230,13 @@
             // НАПОЛНЕНИЕ СЛАЙДЕРА
 
             const sliderContent = document.getElementById('detail-slider-content');
+         // Привязываем свайп
+            sliderContent.onmousedown = handleDragStart;
+            sliderContent.ontouchstart = handleDragStart;
+            window.onmousemove = handleDragMove;
+            sliderContent.ontouchmove = handleDragMove;
+            window.onmouseup = handleDragEnd;
+            sliderContent.ontouchend = handleDragEnd;
 
             const sliderDots = document.getElementById('detail-slider-dots');
 
@@ -1801,3 +1847,4 @@
 </body>
 
 </html> 
+
