--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
             background: white; border-radius: 12px; overflow: hidden; padding-bottom: 10px;
             cursor: pointer;
         }
-        .product-image { width: 100%; height: 180px; object-fit: cover; display: block; }
+        .product-image { 
+    width: 100%; 
+    height: 180px; 
+    object-fit: contain; /* Картинка видна целиком */
+    background-color: #fff; /* Белые поля по бокам или сверху */
+    display: block; 
+}
         .product-info { padding: 8px 10px 0; }
         .grid-price { font-weight: 700; font-size: 16px; margin-bottom: 4px; }
         .grid-name { font-size: 13px; color: #888; line-height: 1.2; }
@@ -77,7 +83,8 @@
         .slider-content img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain; /* Чтобы вещь в слайдере была видна полностью */
+            background-color: #fff; /* Белые поля */
             flex-shrink: 0;
         }
         .slider-nav-btn {
@@ -961,3 +968,4 @@
     </script>
 </body>
 </html>
+
