--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
             cursor: pointer;
         }
         .product-image { 
-    width: 100%; 
-    height: 180px; 
-    object-fit: contain; /* Картинка видна целиком */
-    background-color: #fff; /* Белые поля по бокам или сверху */
-    display: block; 
-}
+            width: 100%; 
+            height: 180px; 
+            object-fit: cover; /* Фото снова заполняет карточку целиком */
+            display: block; 
+        }
         .product-info { padding: 8px 10px 0; }
         .grid-price { font-weight: 700; font-size: 16px; margin-bottom: 4px; }
         .grid-name { font-size: 13px; color: #888; line-height: 1.2; }
@@ -968,4 +967,5 @@
     </script>
 </body>
 </html>
+
 
