--- a/index.html
+++ b/index.html
@@ -533,7 +533,10 @@
             'grey': { 
                 name: 'Штаны Grey Edition', 
                 priceVal: 12000, 
-                price: '12 000 ₽', 
+                price: '12 000 ₽',
+                description: '- Широкий силуэт, держащий форму<br>- Широкие штаны из плотного футера 3-х нитки<br>- Внутри утеплены флисом<br>- Фиксирующий размер внутренний пояс<br>- Два глубоких кармана спереди, один сзади<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла<br>- Благодаря флису сохраняет широкий силуэт при ходьбе и не теряет форму после многократных
+стирок<br>- Усиленная эластичность в шаговой зоне<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность,
+напоминающую кожицу спелого персика', // Описание
                 images: [
                     'img/GREY FRONT.png', 
                     'img/GREY BACK.png', 
@@ -967,5 +970,6 @@
     </script>
 </body>
 </html>
+
 
 
