--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 name: 'Штаны Grey Edition', 
                 priceVal: 12000, 
                 price: '12 000 ₽',
-                description: `- Широкий силуэт, держащий форму<br>- Широкие штаны из плотного футера 3-х нитки<br>- Внутри утеплены флисом<br>- Фиксирующий размер внутренний пояс<br>- Два глубоких кармана спереди, один сзади<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла<br>- Благодаря флису сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок<br>- Усиленная эластичность в шаговой зоне<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика`, 
+                description: `- Широкий силуэт, держащий форму;<br>- Широкие штаны из плотного футера 3-х нитки;<br>- Внутри утеплены флисом;<br>- Фиксирующий размер внутренний пояс;<br>- Два глубоких кармана спереди, один сзади;<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла;<br>- Благодаря флису сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок;<br>- Усиленная эластичность в шаговой зоне;<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика.`, 
                 images: [
                     'img/GREY FRONT.png', 
                     'img/GREY BACK.png', 
@@ -545,7 +545,8 @@
             'blue': { 
                 name: 'Штаны Blue Edtion', 
                 priceVal: 12000, 
-                price: '12 000 ₽', 
+                price: '12 000 ₽',
+                description: `- Широкий силуэт, держащий форму;<br>- Широкие штаны из плотного футера 3-х нитки;<br>- Внутри утеплены флисом;<br>- Фиксирующий размер внутренний пояс;<br>- Два глубоких кармана спереди, один сзади;<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла;<br>- Благодаря флису сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок;<br>- Усиленная эластичность в шаговой зоне;<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика.`,
                 images: [
                     'img/BLUE FRONT.png',
                     'img/BLUE BACK.png',
@@ -968,6 +969,7 @@
     </script>
 </body>
 </html>
+
 
 
 
