--- a/index.html
+++ b/index.html
@@ -62,7 +62,25 @@
             background: white; padding: 12px 15px; display: flex; align-items: center;
             position: sticky; top: 0; z-index: 101; border-bottom: 1px solid #f5f5f5;
         }
-        .back-btn { font-size: 22px; margin-right: 20px; cursor: pointer; color: #000; }
+        .back-btn { 
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 32px;
+            height: 32px;
+            margin-right: 15px; 
+            cursor: pointer; 
+            color: #000; 
+            transition: transform 0.1s ease;
+        } 
+        /* Эффект легкого отскока при клике */
+        .back-btn:active { 
+            transform: scale(0.85); 
+            opacity: 0.6;
+        }
+        .back-btn svg {
+            display: block;
+        }
         .detail-title-small { font-weight: 600; font-size: 17px; text-transform: uppercase; }
 
         /* СТИЛИ СЛАЙДЕРА */
@@ -320,7 +338,12 @@
 
     <div id="product-detail-view" class="page">
         <div class="detail-header">
-            <div class="back-btn" onclick="closeProduct()">&#8592;</div>
+            <div class="back-btn" onclick="closeProduct()">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="19" y1="12" x2="5" y2="12"></line>
+        <polyline points="12 19 5 12 12 5"></polyline>
+    </svg>
+</div>
             <div class="detail-title-small">КАТАЛОГ</div>
         </div>
         
@@ -963,6 +986,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;;
     </script>
 </body>
 </html>
+
 
 
 
