--- a/index.html
+++ b/index.html
@@ -66,20 +66,25 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 32px;
-            height: 32px;
-            margin-right: 15px; 
+            width: 40px;  /* Увеличили область нажатия, чтобы было удобно попадать пальцем */
+            height: 40px;
+            margin-left: -8px; /* Немного сдвигаем влево, чтобы выровнять по краю */
+            margin-right: 10px; 
             cursor: pointer; 
             color: #000; 
-            transition: transform 0.1s ease;
+            transition: all 0.2s ease;
+            border-radius: 50%; /* Чтобы при нажатии был ровный круг */
         } 
-        /* Эффект легкого отскока при клике */
+
         .back-btn:active { 
-            transform: scale(0.85); 
-            opacity: 0.6;
+            background-color: rgba(0, 0, 0, 0.05); /* Легкий фон при нажатии */
+            transform: scale(0.9);
         }
+
         .back-btn svg {
             display: block;
+            width: 24px;
+            height: 24px;
         }
         .detail-title-small { font-weight: 600; font-size: 17px; text-transform: uppercase; }
 
@@ -339,9 +344,8 @@
     <div id="product-detail-view" class="page">
         <div class="detail-header">
             <div class="back-btn" onclick="closeProduct()">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-        <line x1="19" y1="12" x2="5" y2="12"></line>
-        <polyline points="12 19 5 12 12 5"></polyline>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width: 24px; height: 24px;">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
     </svg>
 </div>
             <div class="detail-title-small">КАТАЛОГ</div>
@@ -986,6 +990,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;;
     </script>
 </body>
 </html>
+
 
 
 
