--- a/index.html
+++ b/index.html
@@ -383,7 +383,18 @@
                 <div class="char-row"><span class="char-label">Сезон</span><span class="char-val">Мульти</span></div>
             </div>
             <div id="content-comp" class="desc-content" style="display: none;">
-    Плотный футер 3-х нитка, 86% хлопок, 14% флис, плотностью 485 г/м², флисовый подклад, ткань с peach-эффектом (материал с бархатистой, мягкой и приятной на ощупь поверхностью, напоминающей кожицу спелого персика).
+    <div class="char-row">
+        <span class="char-label">Ткань</span>
+        <span class="char-val">Футер 3-х нитка (плотный)</span>
+    </div>
+    <div class="char-row">
+        <span class="char-label">Хлопок</span>
+        <span class="char-val">86%</span>
+    </div>
+    <div class="char-row">
+        <span class="char-label">Флис</span>
+        <span class="char-val">14% (485 г/м²)</span>
+    </div>
 </div>
         </div>
     </div>
@@ -1003,6 +1014,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;;
     </script>
 </body>
 </html>
+
 
 
 
