--- a/index.html
+++ b/index.html
@@ -378,15 +378,11 @@
             </div>
 
             <div id="content-chars" class="desc-content" style="display: none;">
-                <div class="char-row"><span class="char-label">Материал</span><span class="char-val">Флис</span></div>
+                <div class="char-row"><span class="char-label">Материал</span><span class="char-val">Футер 3-х нитка (плотный)</span></div>
                 <div class="char-row"><span class="char-label">Пол</span><span class="char-val">Унисекс</span></div>
                 <div class="char-row"><span class="char-label">Сезон</span><span class="char-val">Мульти</span></div>
             </div>
             <div id="content-comp" class="desc-content" style="display: none;">
-    <div class="char-row">
-        <span class="char-label">Ткань</span>
-        <span class="char-val">Футер 3-х нитка (плотный)</span>
-    </div>
     <div class="char-row">
         <span class="char-label">Хлопок</span>
         <span class="char-val">86%</span>
@@ -1014,6 +1010,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;;
     </script>
 </body>
 </html>
+
 
 
 
